Fix go on dialog overflow
widths of interleave spot dialog elements were affecting the layout even
when the dialog wasn't open. Set dialogs to be overflow hidden when they
aren't open. closes #109

--- a/internal/static/src/input.css
+++ b/internal/static/src/input.css
@@ -128,12 +128,7 @@ dialog {
   pointer-events: none;
   opacity: 0;
   transition: all 0.3s;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: calc(100vw - 1rem);
-  margin-bottom: 3.5rem;
+  overflow: hidden;
   @apply translate-y-4 rounded-xl;
 }
 
@@ -143,8 +138,15 @@ dialog:focus {
 
 dialog[open] {
   opacity: 1;
+  width: calc(100vw - 1rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 3.5rem;
   pointer-events: inherit;
-  @apply translate-y-0 scale-100;
+  overflow: show;
+  @apply h-max translate-y-0 scale-100;
 }
 
 dialog[open]::backdrop {
@@ -171,14 +173,16 @@ dialog.close::backdrop {
 
 @media screen(sm) {
   dialog {
+    overflow: hidden;
     @apply translate-y-0 scale-95;
-    width: fit-content;
-    margin-bottom: auto;
-    margin-inline: auto;
   }
 
   dialog[open] {
-    @apply translate-y-0 scale-100;
+    width: fit-content;
+    overflow: visible;
+    @apply h-max translate-y-0 scale-100;
+    margin-block: auto;
+    margin-inline: auto;
   }
 }
 
